[project]
name = "vw-parking-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
