[project]
name = "vw-parking-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
]
[tool.ruff]
# Maintain line length compatibility
line-length = 100

# Global indent width setting configuration for Ruff v0.3.0
indent-width = 4

[tool.ruff.format]
# Enforce using spaces instead of tabs
indent-style = "space"

# Prefer double quotes for string literals
quote-style = "double"

# Enable formatting for Python code blocks inside docstrings
docstring-code-format = true
